Fix CSS spacing

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -4,24 +4,36 @@ body {
 }
 
 .card {
-  width: 400px;
+	width: 400px;
   background: #fff;
   margin: 16px auto;
+	padding: 8px;
 }
 
 .title {
+	font-size: 16px;
   background: #e3f4ff;
+	margin-bottom: 8px;
+	margin-top: 0;
+	padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+	margin-bottom: 8px;
+	padding: 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+	text-align: center;
+	padding: 8px;
 }
 
 button {
+	margin: 0 auto;
+	display: block;
   background: white;
   border: 1px solid #eee;
+	padding: 8px 24px;
 }
